--- a/Rules
+++ b/Rules
@@ -2,7 +2,7 @@
 
 require 'compass'
 
-Compass.configuration.parse('compass.rb')
+Compass.configuration.parse('compass_config.rb')
 
 ### Compilation rules
 
