--- a/Rules
+++ b/Rules
@@ -2,7 +2,7 @@
 
 require 'compass'
 
-Compass.add_project_configuration('compass_config.rb')
+Compass.add_project_configuration('config.rb')
 
 ### Compilation rules
 
